SQLproject sql_new modifications

--- a/SQLproject/sql_new.ipynb
+++ b/SQLproject/sql_new.ipynb
@@ -708,12 +708,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "74a4d146-3d5c-41f3-a082-e4a9faef0d9e",
+   "metadata": {},
+   "source": [
+    "## Serialize DF\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8cbb999b-d4bb-44dd-b120-a9d8768e8d35",
+   "id": "f6c79a35-0744-47d1-affe-90c62a410900",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Serialization\n",
+    "with open(\"dfXY.pickle\", \"wb\") as outfile:\n",
+    "    pickle.dump(dfXY, outfile)\n",
+    "#print(\"Written object\", dfXY)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55132c82-6f72-409e-87b2-ab3e29175d5c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "####CHECK STORED DF#####\n",
+    "# Deserialization\n",
+    "with open(\"dfXY.pickle\", \"rb\") as infile:\n",
+    "    dfXYPickle = pickle.load(infile)\n",
+    "#print(\"Reconstructed object\", dfXYPickle)"
+   ]
   },
   {
    "cell_type": "markdown",
