Files not updated in last commit...

--- a/EDAproject/EDA1V/EDA1V_new.ipynb
+++ b/EDAproject/EDA1V/EDA1V_new.ipynb
@@ -295,7 +295,9 @@
    "cell_type": "code",
    "execution_count": 49,
    "id": "add2f4f0-cf61-4565-904e-1aeb398ed1d2",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
