Final model updated

--- a/MODELproject/AllModels/reg_HandSelectedFeatures_Trial.ipynb
+++ b/MODELproject/AllModels/reg_HandSelectedFeatures_Trial.ipynb
@@ -123,8 +123,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "4",
+   "cell_type": "raw",
+   "id": "9d0adc0a-2457-48c7-8098-ac750202ab9c",
    "metadata": {},
    "source": [
     "Xtrain=np.loadtxt(\"Xtrain.csv\",delimiter=\",\", dtype=np.float64)\n",
@@ -135,26 +135,33 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6d0e94725a00ae3f",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "source": [
     "### Preprocessing"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "6d0e94725a00ae3f"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "e4488f15d1ad8f8b",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "from ModelPreprocessing import func_import_data\n",
     "\n",
     "dfX, dfY, dfGroups = func_import_data(30)"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "e4488f15d1ad8f8b"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -4872,6 +4879,7 @@
    "cell_type": "markdown",
    "id": "250",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -7329,7 +7337,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
