--- a/MODELproject/ZoneTempSP_statistical/EDA1V_new.ipynb
+++ b/MODELproject/ZoneTempSP_statistical/EDA1V_new.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "id": "6bb86d32-38e3-45ae-8313-382ef3a954c6",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# A. IMPORT LIBRARIES"
    ]
@@ -29,7 +31,9 @@
   {
    "cell_type": "markdown",
    "id": "1957c1d6-4fd1-492f-84e7-11b9d0167dad",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# B. IMPORT DATASETS"
    ]
@@ -61,9 +65,11 @@
   {
    "cell_type": "markdown",
    "id": "3719e703-e250-41db-9e79-54db145584d4",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
-    " # C. Pre-process\n",
+    "# C. Pre-process\n",
     "\n"
    ]
   },
@@ -687,7 +693,9 @@
   {
    "cell_type": "markdown",
    "id": "e7dff0b3-fa00-44cc-a8f9-d5be8049ab10",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## C.1 Clean categorical vars"
    ]
@@ -1050,7 +1058,9 @@
   {
    "cell_type": "markdown",
    "id": "2dc01853-e884-456d-974b-e1acf3c20317",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## C.2 Clean numeric vars"
    ]
@@ -2538,8 +2548,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "68305a8896c7bce7",
+   "cell_type": "raw",
+   "id": "728fe99b-58cd-487d-a333-8109a75a35fa",
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -2563,8 +2573,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "65e47bc9f6e08f9a",
+   "cell_type": "raw",
+   "id": "8f79ce87-fd99-44a0-809d-9c3cc9ee3ef1",
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -2744,6 +2754,7 @@
    "id": "f2e5d257f8aab0f2",
    "metadata": {
     "collapsed": false,
+    "jp-MarkdownHeadingCollapsed": true,
     "jupyter": {
      "outputs_hidden": false
     }
@@ -2753,8 +2764,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "42e39fb9c70392e0",
+   "cell_type": "raw",
+   "id": "be00461b-caa5-4321-a085-dc7d737d8fe9",
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -4701,7 +4712,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1e529ba-b1e0-466e-bce1-586c5b3f5e2b",
+   "id": "95395ed9-7f73-4e4e-8e15-2d0c4fa80ef1",
    "metadata": {},
    "outputs": [],
    "source": []
